Remove javax.xml.bind dependency
Use the built-in java.util classes instead